[package]
name = "cron_manager"
version = "0.1.0"
edition = "2021"
authors = ["Mike Potapenco <buhaytza2005@gmail.com>"]
description = "A simple manager to add/remove cronjobs"
readme = "README.md"
repository = "https://github.com/buhaytza2005/cron_manager"
license = "Apache-2.0"
keywords = ["cron", "cronjob"]


[dependencies]
nix = "0.29.0"
tempfile = "3.10.1"

[dev-dependencies]
rand = "0.8.5"
